<resources>

    <string name="app_name">MAD2021_W1_0706012010039</string>

    <!-- activity_main.xml -->
    <string name="list_of_users">List of Users</string>
    <string name="no_data">No Data.</string>

    <!-- add_collection.xml -->
    <string name="add_textInputLayout_fullname">Full Name</string>
    <string name="add_textInputLayout_age">Age</string>
    <string name="add_textInputLayout_address">Address</string>

    <!-- activity_detail.xml -->
    <string name="user_details">User Details</string>
    <string name="full_name">Full Name</string>
    <string name="years_old">years old</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <string name="tool_add">Add User</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="button_save_data">Save Data</string>

</resources>